k8s/auth_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: auth-deployment
    spec:
      containers:
      - image: victortsaitw12/d3-practice-auth
        imagePullPolicy: Always
        name: d3-practice-auth
        ports:
          - containerPort: 9000
