k8s/elasticsearch_deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch-deployment
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:6.3.1
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
        - containerPort: 9300
