k8s/gce_crawler_service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: crawler-deployment
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: crawler-deployment
    spec:
      containers:
      - image: victortsaitw12/d3-practice-crawler:v3
        imagePullPolicy: Always
        name: d3-practice-crawler
