k8s/kibana_deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana-deployment
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:6.3.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5601
