k8s/mongo_deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        #image: clutteredcode/mongo-alpine:latest
        image: mongo:3.6
        imagePullPolicy: Always
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodata
          mountPath: /data/db
      volumes:
        - name: mongodata
          persistentVolumeClaim:
            claimName: mongo-data
