k8s/web_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web-deployment
    spec:
      containers:
      - image: victortsaitw12/d3-practice-web
        imagePullPolicy: Always
        name: d3-practice-web
        ports:
          - containerPort: 8080
