k8s/auth_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: LoadBalancer
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: auth-deployment
