k8s/elasticsearch_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  type: LoadBalancer
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    app: elasticsearch-deployment
