k8s/gce_auth_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app: auth-deployment

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: auth-deployment
    spec:
      containers:
      - image: victortsaitw12/d3-practice-auth:v4
        imagePullPolicy: Always
        name: d3-practice-auth
        ports:
          - containerPort: 9000
