k8s/gce_restful_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restful-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: restful-deployment

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: restful-deployment
spec:
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: restful-deployment
    spec:
      containers:
      - image: victortsaitw12/d3-practice-restful
        imagePullPolicy: Always
        name: d3-practice-restful
        ports:
          - containerPort: 8081
