k8s/kibana_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  type: LoadBalancer
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana-deployment
