k8s/restful_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restful-service
spec:
  type: LoadBalancer
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: restful-deployment
